package es.masanz.ut7.pokemonfx.model.type;

public interface Agua {

}